# infokoptemplating

./: .gitignore  Cargo.toml  curls.http  day.json  day_lifts.json  infokop.html  infosnip.html  infosnipper.html  night.json  style.css  weather.json
src/: lib.rs  main.rs  piste.rs  weather.rs
templates/: app.html  base.html  hello.html  lift.html  output.css  package-lock.json  piste.html  weather.html
